# riven

./: .gitignore  README.md  install.sh  uninstall.sh
crates/riven-cli/: Cargo.toml
crates/riven-cli/src/: build.rs  cli.rs  deps.rs  lib.rs  lock.rs  main.rs  manifest.rs  module_discovery.rs  resolve_deps.rs  rlib.rs  scaffold.rs  version.rs
crates/riven-cli/tests/: installed_pkg_manager.rs  package_manager.rs
crates/riven-core/: Cargo.toml
crates/riven-core/runtime/: runtime.c
crates/riven-core/src/: lib.rs
crates/riven-core/src/borrow_check/: borrows.rs  errors.rs  lifetimes.rs  mod.rs  moves.rs  ownership.rs  regions.rs  tests.rs
crates/riven-core/src/codegen/: cranelift.rs  layout.rs  mod.rs  object.rs  runtime.rs  tests.rs
crates/riven-core/src/diagnostics/: mod.rs
crates/riven-core/src/formatter/: comments.rs  doc.rs  format_expr.rs  format_imports.rs  format_items.rs  format_pattern.rs  format_type.rs  mod.rs  tests.rs
crates/riven-core/src/hir/: context.rs  mod.rs  nodes.rs  tests.rs  types.rs
crates/riven-core/src/lexer/: mod.rs  tests.rs  token.rs
crates/riven-core/src/mir/: lower.rs  mod.rs  nodes.rs  tests.rs
crates/riven-core/src/parser/: ast.rs  expr.rs  mod.rs  patterns.rs  printer.rs  tests.rs  types.rs
crates/riven-core/src/resolve/: mod.rs  scope.rs  symbols.rs
crates/riven-core/src/typeck/: coerce.rs  infer.rs  mod.rs  tests.rs  traits.rs  unify.rs
crates/riven-core/tests/: borrow_check_sample.rs  enum_codegen_debug.rs  enum_mir_debug.rs  lex_sample.rs  llvm_backend.rs  option_result_runtime.rs  parse_sample.rs  phase7_ffi.rs  runtime_safety.rs  typecheck_sample.rs
crates/riven-core/tests/fixtures/: arithmetic.rvn  classes.rvn  (+11 more)
crates/riven-repl/: Cargo.toml  build.rs
crates/riven-repl/src/: capture.rs  commands.rs  completion.rs  display.rs  env.rs  eval.rs  highlight.rs  jit.rs  main.rs  session.rs  validate.rs
crates/riven-repl/tests/: installed_repl.rs  repl_tests.rs
crates/rivenc/: Cargo.toml
crates/rivenc/benches/: cache_bench.rs
crates/rivenc/src/: lib.rs  main.rs
crates/rivenc/tests/: cache_integration.rs  installed_binary.rs
(+257 files in other folders)
