[package]
name = "riven-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "riven_cli"
path = "src/lib.rs"

[[bin]]
name = "riven"
path = "src/main.rs"

[features]
llvm = ["riven-core/llvm"]

[dependencies]
riven-core = { path = "../riven-core" }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ar = "0.9"

[dev-dependencies]
riven-core = { path = "../riven-core" }
tempfile = "3"
