[package]
name = "riven-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "riven_core"

[features]
sanitize = []
llvm = ["dep:inkwell"]

[dev-dependencies]
proptest = "1"

[dependencies]
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-object = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

# LLVM backend (optional, requires LLVM 18 installed)
[dependencies.inkwell]
version = "0.5"
features = ["llvm18-0"]
optional = true
