[package]
name = "riven-repl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riven-repl"
path = "src/main.rs"

[dependencies]
riven-core = { path = "../riven-core" }
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-codegen = "0.130"
cranelift-native = "0.130"
cranelift-frontend = "0.130"
rustyline = "15"
target-lexicon = "0.13"

[build-dependencies]
cc = "1"
