[package]
name = "rivenc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rivenc"
path = "src/main.rs"

[features]
llvm = ["riven-core/llvm"]

[dependencies]
riven-core = { path = "../riven-core" }
sha2 = "0.10"
postcard = { version = "1.1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false, features = ["plotters", "cargo_bench_support"] }

[[bench]]
name = "cache_bench"
harness = false
path = "benches/cache_bench.rs"
